# orange

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/core/: asserts.h  defines.h  log.c  log.h
src/platform/: platform.h  platform_linux.c  platform_windows.c
